--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li class="contact"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
+            <button class="modal-btn" type="button" data-modal-open>REJESTRACJA</button>
         </div>
     </header>
     <main>
@@ -366,5 +367,13 @@
                 </div>
             </div>
         </footer>
+        <!--  do backdrop okna modalnego dodaj jako tekst: data-modal -->
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button type="button" class="close-btn" data-modal-close>X</button>
+            </div>
+        </div>
+               
+        <script src="./js/modal.js"></script>
 </body>
 </html>
