--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
                     <li class="contact"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
-            <button class="modal-btn" type="button" data-modal-open>REJESTRACJA</button>
         </div>
     </header>
     <main>
         <section class="header-main">
             <div class="header-main-layout container">
                 <h1 class="title"><span>Effective Solutions</span><br/>for Your Business</h1>
-                <button class="button-index" type="button">Order Service</button>
+                <button class="button-index modal-btn" type="button" data-modal-open>Order Service</button>
             </div>
         </section>            
         <section class="features-section">
@@ -370,7 +369,7 @@
         <!--  do backdrop okna modalnego dodaj jako tekst: data-modal -->
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button type="button" class="close-btn" data-modal-close>X</button>
+                <button type="button" class="close-btn" data-modal-close>x</button>
             </div>
         </div>
                
