--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,11 @@
 
                 <ul class="list buttons-link">
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_9.jpg" alt="bank app" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Banking App Interface Concept</h2>
@@ -59,7 +63,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_10.jpg" alt="cashless payment mobilephone" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Cashless Payment</h2>
@@ -68,7 +77,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_11.jpg" alt="laptop" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Meditation App</h2>
@@ -77,7 +91,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_12.jpg" alt="driving car" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Taxi Service</h2>
@@ -88,7 +107,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_13.jpg" alt="screen design" width="360" height="300">
                             <div class="name-cat-app-box">
                                <h2 class="header-list">Screen Illustrations</h2>
@@ -97,7 +121,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_14.jpg" alt="smiling woman wearing glasses" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Online Courses</h2>
@@ -106,7 +135,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_15.jpg" alt="screen design Concept" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Instagram Stories Concept</h2>
@@ -115,7 +149,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_16.jpg" alt="food in the bag" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Organic Food</h2>
@@ -124,7 +163,12 @@
                         </a>
                     </li>
                     <li class="list-link-buttons">
-                        <a class="image link image-link" href="">
+                        <a class="image link image-link img-transition" href="">
+                            <div class="img-trans-container">
+                                <a class img-trans-text>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</a>
+                            </div>
                             <img class="img" src="./images/img_17.jpg" alt="pouring coffee" width="360" height="300">
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Fresh Coffee</h2>
