--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,11 @@
                 <ul class="list buttons-link">
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_9.jpg" alt="bank app" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_9.jpg" alt="bank app" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Banking App Interface Concept</h2>
                                 <p class="paragraph">App</p>
