--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_10.jpg" alt="cashless payment mobilephone" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_10.jpg" alt="cashless payment mobilephone" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Cashless Payment</h2>
                                 <p class="paragraph">Marketing</p>
@@ -73,7 +78,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_11.jpg" alt="laptop" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_11.jpg" alt="laptop" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Meditation App</h2>
                                 <p class="paragraph">App</p>
@@ -82,7 +92,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_12.jpg" alt="driving car" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_12.jpg" alt="driving car" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Taxi Service</h2>
                                 <p class="paragraph">Marketing</p>
@@ -91,7 +106,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_13.jpg" alt="screen design" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_13.jpg" alt="screen design" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                <h2 class="header-list">Screen Illustrations</h2>
                                 <p class="paragraph">Design</p>
@@ -100,7 +120,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_14.jpg" alt="smiling woman wearing glasses" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_14.jpg" alt="smiling woman wearing glasses" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Online Courses</h2>
                                 <p class="paragraph">Marketing</p>
@@ -109,7 +134,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_15.jpg" alt="screen design Concept" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_15.jpg" alt="screen design Concept" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Instagram Stories Concept</h2>
                                 <p class="paragraph">Design</p>
@@ -118,7 +148,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_16.jpg" alt="food in the bag" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_16.jpg" alt="food in the bag" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Organic Food</h2>
                                 <p class="paragraph">Web Site</p>
@@ -127,7 +162,12 @@
                     </li>
                     <li class="list-link-buttons">
                         <a class="image link image-link img-transition" href="">
-                            <img class="img" src="./images/img_17.jpg" alt="pouring coffee" width="360" height="300">
+                            <div class="img-trans-box">
+                                <img class="img" src="./images/img_17.jpg" alt="pouring coffee" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                                    Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="name-cat-app-box">
                                 <h2 class="header-list">Fresh Coffee</h2>
                                 <p class="paragraph">Web Site</p>
