--- a/index.html
+++ b/index.html
@@ -369,7 +369,11 @@
         <!--  do backdrop okna modalnego dodaj jako tekst: data-modal -->
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button type="button" class="close-btn" data-modal-close>x</button>
+                <button type="button" class="close-btn" data-modal-close>
+                    <svg class="svg-four" width="8" height="8">
+                        <use href="./images/icons.svg#icon-cross"></use>
+                    </svg>
+                </button>
             </div>
         </div>
                
